--- a/insurance.html
+++ b/insurance.html
@@ -57,7 +57,7 @@ input[type=submit] {
   position: absolute;
   border: 1px solid #d4d4d4;
   border-bottom: none;
-  border-top: none;
+  border-bo: none;
   z-index: 99;
   top: 100%;
   left: 0;
@@ -85,7 +85,6 @@ form.moved-up {
   transform: translateY(10px);
 }
 </style>
-</head>
 <body>
 
 <h2>Autocomplete</h2>
